--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <button class="operands">7</button>
                 <button class="operands">8</button>
                 <button class="operands">9</button>
-                <button disabled class="operators">x</button>
+                <button disabled class="operators">*</button>
                 <button class="operands">4</button>
                 <button class="operands">5</button>
                 <button class="operands">6</button>
